--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -493,9 +493,9 @@
    "source": [
     "\"\"\"Connecting to the TweePy API\"\"\"\n",
     "\n",
-    "\"\"\"TODO: Remove Key Secret\"\"\"\n",
-    "api_key = \"a3ErriWDYrXoKPORmVLXUgHc4\"\n",
-    "api_secret = \"9zjvmCwpwyfGVNLnrOsxeG4qIAMvVCfckFTVoolH88soThd6nS\"\n",
+    "\"\"\"API Key and Secret are hidden\"\"\"\n",
+    "api_key = \"***\"\n",
+    "api_secret = \"***\"\n",
     "\n",
     "auth = tweepy.OAuthHandler(api_key, api_secret)\n",
     "\n",
